# my_fridge

./: .env.example  .gitignore  Dockerfile  README.md  admin_cookie.txt  alembic.ini  database.py  docker-compose.yml  es_db_manage.py  es_manage.py  import_data.py  main.py  ml.py  models.py  pyproject.toml  requirements.txt  schemas.py  search_client.py  test.db  user_cookie.txt
alembic/: env.py
alembic/versions/: 174b3419f99e_add_dish_recipe_and_recipe_ingredient_.py  45d79dbe1385_initial_schema_from_models.py  4c0693ef2a48_add_title_and_thumbnail_to_recipe.py  5216aa8b5788_update_user_model_with_constraints_and_.py  7b3277565cdf_add_ingredient_tables.py  ba0553bc0e62_separate_dish_and_recipe_models.py  ce1b005383fd_add_users_table.py  f5dd64721b56_add_name_and_restore_title_to_recipe_.py  fa780f0cec94_add_nickname_to_user_table.py
auth/: dependencies.py
backend/: .dockerignore  Dockerfile  main.py  ml.py  models.py  pyproject.toml  pytest.ini  search_client.py
backend/alembic/: env.py
backend/auth/: dependencies.py
backend/es/: Dockerfile  synonym-set.txt  userdict_ko.txt
backend/repositories/: dishes.py  ingredients.py  search.py  users.py
backend/schemas/: dish.py  ingredient.py
backend/tests/: syn-test.json  test_dishes.py
elasticsearch/: Dockerfile
elasticsearch/dict/: synonym-set.txt  userdict_ko.txt
repositories/: dishes.py  ingredients.py  search.py  users.py
schemas/: dish.py  ingredient.py  user.py
tests/: syn-min.json  test_dishes.py  test_ingredients.py  test_simple_async.py  test_users.py
utils/: security.py
(+10 files in other folders)
